src/components/ui/feed-info/feed-info.module.css
.columns {
  display: flex;
  justify-content: left;
  align-items: flex-start;
}
.column {
  display: inline;
  min-width: 50%;
}

.list {
  list-style: none;
  margin: 0;
  padding-left: 0;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
  grid-template-rows: repeat(10, auto);
  grid-auto-flow: column;
  max-height: 180px;
  overflow: hidden;
}

.title {
  margin: 0;
  text-align: left;
}

.list_item {
  text-align: left;
  margin-bottom: 8px;
}

.content {
  text-align: left;
}

